--- a/seatcover.html
+++ b/seatcover.html
@@ -156,8 +156,8 @@
                               <img src="img/profile.png" alt="">
                           </a>
                           <div class="dropdown-menu text-right text-dark" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item text-dark" href="#">السله</a>
-                            <a class="dropdown-item text-dark" href="#">الحساب</a>
+                            <a class="dropdown-item text-dark" href="cartpage.html">السله</a>
+                            <a class="dropdown-item text-dark" href="profile.html">الحساب</a>
                             <a class="dropdown-item text-dark" href="#">الموقع</a>
                             <a class="dropdown-item text-dark" href="#">تغيير كلمه المرور</a>
                             <div class="dropdown-divider"></div>
@@ -182,25 +182,25 @@
               <a class="nav-link" style="color: #000; font-weight: 400;" href="#">تتجه الان :</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">| اغطيه جسم السياره  </a>
+                <a class="nav-link" href="seatcover.html">| اغطيه جسم السياره  </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">اغطيه مقاعد السياره</a>
+                <a class="nav-link" href="seatcover.html">اغطيه مقاعد السياره</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">دواسات السياره</a>
+                <a class="nav-link" href="seatcover.html">دواسات السياره</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">مظلات السياره</a>
+                <a class="nav-link" href="seatcover.html">مظلات السياره</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">غطاء جسم الدراجه</a>
+                <a class="nav-link" href="seatcover.html">غطاء جسم الدراجه</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">غطاء مقعد الدراجه</a>
+                <a class="nav-link" href="seatcover.html">غطاء مقعد الدراجه</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">اقنعه الوجه</a>
+                <a class="nav-link" href="seatcover.html">اقنعه الوجه</a>
               </li>
           </ul>
         </div>
@@ -784,7 +784,7 @@
                       <li><a href="">معلومات عنا</a></li>
                       <li><a href="">حياه مهنيه</a></li>
                       <li><a href="">في الاخبار</a></li>
-                      <li><a href="">اتصل بنا</a></li>
+                      <li><a href="callus.html">اتصل بنا</a></li>
                       <li><a href="">مدونه</a></li>
                   </ul>
               </div>
